# RRC

./: README.md
GameDev/LOVE2D/: conf.lua  main.lua
Python/Basic_App/: PKGBUILD  pyproject.toml
Python/Basic_App/src/app_name/: main.py
React/: README.md  index.html
React/src/: App.jsx  Card.jsx  index.css  main.jsx
React/src/assets/css/: Article-body.css  Article.css  Card.css  Footer.css  Header.css  Navigation.css  Navigation.module.css  Tag.css
React/src/component/: Article.jsx  Articlebody.jsx  Card.jsx  DescRight.jsx  Footer.jsx  Header.jsx  Navigation.jsx  Tag.jsx
Static/: README.md
Static/Blog/: index.html
Static/Blog/about/: index.html
Static/Blog/assets/js/: articles-data.js  main.js
Static/Blog/dashboard/: index.html
Static/Blog/pages/example1/: index.html
Static/Blog/pages/example2/: index.html
Static/Blog/projects/: index.html
Static/Documentation/blue-scheme/: index.html
Static/Documentation/blue-scheme/about/: index.html
Static/Documentation/blue-scheme/assets/css/: style.css
Static/Documentation/blue-scheme/assets/js/: main.js
Static/Documentation/blue-scheme/docs/installation/: index.html
Static/Documentation/blue-scheme/docs/navbar-kiri/: index.html
